tests/NormalTests/paczka1/fuzzy1/49358296.err
Error in line 6: A870 A9 77,4
Error in line 16: ATv A9 44,5
Error in line 25: WPh A425 80,7
Error in line 32: WPh A499 85,4
